Fix default colors and settings icon spacing on mobile.

--- a/themes.css
+++ b/themes.css
@@ -2,9 +2,32 @@
    Themes
    ========================================================================== */
    
+/* Default
+   ========================================================================== */
+
+:root {
+   /* HTML */
+   --kitsune-html-background-color: #181828;
+   --kitsune-html-color: #e8e8f8;
+
+   /* Link */
+   --kitsune-link-underline-color: #383838;
+   --kitsune-link-underline-color-hover: #d88830;
+
+   /* Menu */
+   --kitsune-menu-background-color: var(--kitsune-html-color);
+   --kitsune-menu-color: var(--kitsune-html-background-color);
+
+   /* Theme */
+   --kitsune-theme-background-color: var(--kitsune-html-color);
+   --kitsune-theme-color: var(--kitsune-html-background-color);
+   --kitsune-theme-background-color-hover: var(--kitsune-link-underline-color-hover);
+   --kitsune-theme-color-hover: var(--kitsune-html-background-color);
+}
+
 /* Cyberpunk
-   ======================================================================== */
-   
+   ========================================================================== */
+
 .cyberpunk {
   /* HTML */
   --kitsune-html-background-color: #1D1F28;
@@ -21,15 +44,15 @@
 }
 
 /* Nero (Fate)
-   ======================================================================== */
+   ========================================================================== */
    
 .nero {
   /* HTML */
   --kitsune-html-background-color: hsl(0, 48%, 48%);
-  --kitsune-html-color: hsla(0, 48%, 100%, 0.8);
+  --kitsune-html-color: hsl(0, 48%, 100%);
 
   /* Link */
-  --kitsune-link-underline-color: hsla(0, 48%, 100%, 0.2);
+  --kitsune-link-underline-color: hsl(0, 48%, 64%);
   --kitsune-link-underline-color-hover: hsl(32, 64%, 72%);
   
   /* Menu */
@@ -38,7 +61,7 @@
 }
 
 /* Vanilla (Nekopara)
-   ======================================================================== */
+   ========================================================================== */
    
 .vanilla {
   /* HTML */
@@ -59,13 +82,21 @@
    ========================================================================== */
       
 .settings {
-  bottom: 4rem;
+  bottom: 2rem;
   position: fixed;
-  right: 4rem;
+  right: 2rem;
+}
+
+@media (min-width: 768px) {
+  .settings {
+    bottom: 4rem;
+    right: 4rem;
+  }
 }
 
 .icon {
-  background-color: var(--kitsune-link-underline-color);
+  background-color: currentColor;
+  background-color: var(--kitsune-link-color, currentColor);
   border-radius: 9999rem;
   display: block;
   height: 1rem;
@@ -80,14 +111,15 @@
 
 .menu {
   background-color: var(--kitsune-menu-background-color);
+  border-radius: 0.125rem;
   bottom: 100%;
   color: var(--kitsune-menu-color);
   margin: 0;
   margin-bottom: 1rem;
   opacity: 0;
-  padding: 0;
+  padding: 0.25rem 0;
   position: absolute;
-  right: 0;
+  right: -0.125rem;
   transform: translateY(1rem);
   transition:
     opacity 320ms,
@@ -100,7 +132,7 @@
   border-top-color: var(--kitsune-menu-background-color);
   content: "";
   display: block;
-  height: 0.125rem;
+  height: 0.5rem;
   position: absolute;
   top: 100%;
   right: 0.25rem;
@@ -114,33 +146,15 @@
 }
 
 .theme {
+  background-color: var(--kitsune-theme-background-color);
+  color: var(--kitsune-theme-color);
   cursor: pointer;
-  overflow: hidden;
   padding: 0.5rem 1rem;
-  position: relative;
-  z-index: 1;
-}
-
-.theme::before {
-  background-color: var(--kitsune-link-underline-color-hover);
-  content: '';
-  display: block;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  transform: translateX(-100%);
-  transition: transform 320ms;
-  width: 100%;
-  z-index: -1;
 }
 
 .theme:hover {
+  background-color: var(--kitsune-theme-background-color-hover);
   color: var(--kitsune-theme-color-hover);
-}
-
-.theme:hover::before {
-  transform: translateX(0);
 }
 
 /* =============================================================================
